# Portfolio06

./: pyproject.toml
.github/workflows/: my_first_actions.yml
fairsharer/: fair_sharer.py
tests/: test_fair_sharer.py
